# fakechroot

./: .cvsignore  .gitignore  .gitlab-ci.yml  .travis.yml  2  AUTHORS  BUGS  COPYING  DEBUG  INSTALL  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.fakechroot  README.html  README.md  THANKS  THANKS.md  acinclude.m4  aclocal.m4  autoconf.sh  autogen.sh  communicate.c  communicate.h  config.h.in  config.sh.in  configure  configure.ac  debug.setting  debug.setting.bash  debug.sh  fakechroot.dsc.in  faked.c  faked.cc  fakerootconfig.h  libfakeroot.c  ltmain.sh  makebinary.sh  (+8 more)
.github/workflows/: c-cpp.yml
debian/: .cvsignore  changelog  changelog.in  clean  control  copyright  fakechroot.docs  fakechroot.examples  fakechroot.install  fakechroot.lintian-overrides  gbp.conf  libfakechroot.dirs  libfakechroot.install  libfakechroot.lintian-overrides  packages  rules  shlibs  watch  yada
doc/: Makefile.am  Makefile.in  README.fake  README.fakechroot  README.saving  debootstrap.diff  faked.1  fakeroot.1
doc/es/: Makefile.am  faked.1  fakeroot.1
doc/fr/: Makefile.am  Makefile.in  fakeroot.1
doc/sv/: Makefile.am  Makefile.in  faked.1  fakeroot.1
easy_demo/: compile.sh  getpid.c  ld.sh  loop  loop.c  loop1  loop1.c  loop2  loop2.c  macro.c  main  main.c  open.c
easy_demo/i686/: loop1  loop2  pid
easy_demo/x86_64/: loop1  loop2  pid
fake/: .cvsignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  libfakeroot.c
fake/doc/: Makefile.am  Makefile.in  README.fake
fake/src/: Makefile.am  Makefile.in  libfakechroot.c
m4/: bind_argtypes.m4  check_c_alignof.m4  check_c_attribute.m4  check_c_attribute_section.m4  check_c_attribute_visibility.m4  check_fts_name_type.m4  check_func_argtypes.m4  check_func_raw_decl.m4  check_opendir_calls_internally.m4  includes_headers.m4  no_cross_compiling.m4  prog_prove_opt.m4  readlink_argtypes.m4  readlinkat_argtypes.m4  scandir64_argtypes.m4  scandir_argtypes.m4
man/: Makefile.am  Makefile.in  fakechroot.1  fakechroot.pod  makeman.sh
scripts/: Makefile.am  Makefile.in  arch-chroot.env.sh  chroot.env  chroot.env.sh  chroot.fakechroot.sh  chroot.sh  debootstrap.env  debootstrap.env.sh  env.fakechroot.sh  fakechroot.in  fakechroot.sh  fakeroot  fakeroot.in  instdebug  ldconfig.sh  ldd.fake  ldd.fakechroot.pl  ldd.pl  pacstrap.env.sh  relocatesymlinks.sh  restoremode.sh  rinse.env.sh  savemode.sh  unshare.fakechroot.sh
src/: .#libfakechroot.c  .unionfs.c.swp  .unionfs.h.swp  Makefile.am  Makefile.in  __fstatat64_time64.c  __fxstatat.c  __fxstatat64.c  __getcwd_chk.c  __getwd_chk.c  __lstat64_time64.c  __lxstat.c  __lxstat64.c  __lxstat64.h  __open.c  __open64.c  __open64_2.c  __open_2.c  __openat64_2.c  __openat_2.c  __opendir2.c  __readlink_chk.c  __readlinkat_chk.c  __realpath_chk.c  __realpath_chk.h  __stat64_time64.c  __statfs.c  __utime64.c  __utimensat64.c  __utimes64.c  __xmknod.c  __xmknodat.c  __xstat.c  __xstat64.c  __xstat64.h  _xftw.c  _xftw64.c  access.c  acct.c  audit.c  (+185 more)
test/: .proverc  Makefile.am  Makefile.in  arch.sh  archlinux.sh  chroot.sh  chroot.t  common.inc  common.inc.sh  common.sh  compare-tar  debootstrap.sh  echo_arg  escape-nested-chroot.t  fakechroot.sh  febootstrap.sh  pwd.t  readlink.inc.sh  rinse.sh  seq.inc  t.chroot  t.echoarg  t.escape-nested-chroot  t.falsereturn  t.mknod  t.option  t.pwd  t.tar  t.touch  t.touchinstall  t.truereturn  tap.inc  tap.inc.sh  tap.sh  tartest  tartest.tar.gz.uue  testtree.sh  touch.inc.sh  touch.t
test/java/: Hello.java  manifest.txt
test/src/: Makefile.am  Makefile.in  test-canonicalize_file_name.c  test-chroot.c  test-clearenv.c  test-de_dotdot.c  test-dedotdot.c  test-dladdr.c  test-execlp.c  test-execve-null-envp.c  test-fts.c  test-ftw.c  test-hello.c  test-lstat.c  test-mkdtemp.c  test-mkstemp.c  test-mkstemps.c  test-mktemp.c  test-opendir.c  test-passwd.c  test-popen.c  test-posix_spawn.c  test-posix_spawnp.c  test-ptsname.c  test-realpath.c  test-scandir.c  test-socket-af_unix-client.c  test-socket-af_unix-server.c  test-statfs.c  test-statvfs.c  test-system.c
test/t/: 00echo.t  00empty.t  canonicalize_file_name.t  chdir.t  chroot.t  clearenv.t  cmd-subst-pwd.sh  cmd-subst.t  cp.t  de_dotdot.t  dedotdot.t  dladdr.t  escape-nested-chroot.t  execlp.t  execve-elfloader.t  execve-null-envp.t  fakeroot-chroot.t  fts.t  ftw.t  host.t  java.t  jemalloc.t  ldd_interp.t  mkstemps.t  mktemp.t  opendir.t  passwd.t  popen.t  posix_spawn.t  posix_spawnp.t  pwd.t  readlink.t  realpath.t  rm.t  socket-af_unix.t  statfs.t  statvfs.t  symlink.t  system.t  test-r.t  (+4 more)
