# $Id$

AC_PREREQ(2.59)
AC_INIT([fakechroot], [2.3], [dexter@debian.org])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AC_CONFIG_SRCDIR([src/libfakechroot.c])
AC_CONFIG_HEADER([config.h])
AC_LANG_C

# Checks for programs.
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_LN_S

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
