pkglib_LTLIBRARIES = libfakechroot.la
libfakechroot_la_SOURCES = \
    __fxstatat64.c \
    __fxstatat.c \
    __getcwd_chk.c \
    __getwd_chk.c \
    __lxstat64.c \
    __lxstat.c \
    __open_2.c \
    __open64_2.c \
    __open64.c \
    __openat_2.c \
    __openat64_2.c \
    __open.c \
    __opendir2.c \
    __readlink_chk.c \
    __readlinkat_chk.c \
    __realpath_chk.c \
    __statfs.c \
    __xmknod.c \
    __xstat.c \
    __xstat64.c \
    _xftw.c \
    _xftw64.c \
    chdir.c \
    chroot.c \
    getcwd.c \
    getcwd.h \
    libfakechroot.c \
    libfakechroot.h
libfakechroot_la_LDFLAGS = -avoid-version

AM_CFLAGS = -g -Wall -Wno-deprecated-declarations
