check_PROGRAMS = \
    test-canonicalize_file_name \
    test-chroot \
    test-clearenv \
    test-execlp \
    test-execve-null-envp \
    test-fts \
    test-ftw \
    test-lstat \
    test-mktemp \
    test-opendir \
    test-popen \
    test-realpath \
    test-scandir \
    test-socket-af_unix-client \
    test-socket-af_unix-server \
    test-statfs \
    test-statvfs \
    test-system \
    #

AM_CFLAGS = -Wall -Wno-deprecated-declarations
