check_PROGRAMS = \
    test-canonicalize_file_name \
    test-chroot \
    test-clearenv \
    test-dedotdot \
    test-execlp \
    test-execve-null-envp \
    test-fts \
    test-ftw \
    test-hello \
    test-lstat \
    test-mkdtemp \
    test-mkstemp \
    test-mkstemps \
    test-mktemp \
    test-opendir \
    test-popen \
    test-posix_spawn \
    test-posix_spawnp \
    test-realpath \
    test-scandir \
    test-socket-af_unix-client \
    test-socket-af_unix-server \
    test-statfs \
    test-statvfs \
    test-system \
    #

AM_CFLAGS = $(EXTRA_CFLAGS)
AM_LDFLAGS = $(EXTRA_LDFLAGS)
